<?xml version="1.0"?>
<package>
  <name>ros_tensorflow</name>
  <version>1.10.0</version>
  <description>TensorFlow interface package</description>
  <maintainer email="david.wong@tier4.jp">David Wong</maintainer>
  <license>Apache 2</license>
  <author email="david.wong@tier4.jp">David Wong</author>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <export>
  </export>
</package>
